# domashka_bank

./: .coverage  .env.template  .flake8  .gitignore  README.MD  README.md  main.py  pyproject.toml  requirements.txt  test_masks.py  test_processing.py  test_widget.py
data/: operations.json
htmlcov/: index.html
src/: README.MD  __init__.py  bank_operation.py  data_loader.py  decorators.py  external_api.py  file_reader.py  filters.py  generators.py  log_config.py  main.py  masks.py  processing.py  read_operation.py  utils.py  widget.py
tests/: conftest.py  test_bank_operations.py  test_data_loader.py  test_decorators.py  test_external_api.py  test_file_reader.py  test_filters.py  test_generators.py  test_masks.py  test_processing.py  test_read_operation.py  test_utils.py  test_widget.py
