[tool.poetry]
name = "pythonproject6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.4.1"
generators = "^2020.4.27"
parameterized = "^0.9.0"
transaction = "^5.0"
dotenv = "^0.9.9"
requests = "^2.32.4"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.16.0"
black = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
